external-crates/move/crates/move-compiler/tests/move_check/typing/implicit_deref_borrow_field_missing.snap
---
source: crates/move-compiler/tests/move_check_testsuite.rs
info:
  flavor: core
  edition: legacy
  lint: false
---
error[E03010]: unbound field
  ┌─ tests/move_check/typing/implicit_deref_borrow_field_missing.move:5:9
  │
5 │         s.g;
  │         ^^^ Unbound field 'g' in '0x8675309::M::S'

error[E03010]: unbound field
  ┌─ tests/move_check/typing/implicit_deref_borrow_field_missing.move:6:9
  │
6 │         sref.g;
  │         ^^^^^^ Unbound field 'g' in '0x8675309::M::S'

error[E03010]: unbound field
  ┌─ tests/move_check/typing/implicit_deref_borrow_field_missing.move:7:9
  │
7 │         s_mut.h;
  │         ^^^^^^^ Unbound field 'h' in '0x8675309::M::S'

error[E06001]: unused value without 'drop'
  ┌─ tests/move_check/typing/implicit_deref_borrow_field_missing.move:7:16
  │
2 │     struct S { f: u64 }
  │            - To satisfy the constraint, the 'drop' ability would need to be added here
3 │ 
4 │     fun t0(s: S, sref: &S, s_mut: &mut S) {
  │            -  - The type '0x8675309::M::S' does not have the ability 'drop'
  │            │   
  │            The parameter 's' still contains a value. The value does not have the 'drop' ability and must be consumed before the function returns
  ·
7 │         s_mut.h;
  │                ^ Invalid return
